--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -39,6 +39,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The schema of the available data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "metadata": {
@@ -389,27 +396,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first examine the question 'do people use the microsoft bing search engine notably often to look at microsoft-related wikipedia pages?' I would expect so, because 1) people who use microsoft products may be most likely to be reading about microsoft products and 2) microsoft makes bing the default search engine on microsoft stuff, and many people tend not to switch away from defaults."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There is some code in `problem.py` to facilitate answering such questions. There are a few things to know about how it works\n",
+    "## Microsoft Problem\n",
     "\n",
-    "## Declaring a WikiProblem\n",
-    "\n",
-    "`problem.py` provides a WikiProblem class which knows how to accept problem instances and produce the graphs below.\n",
-    "\n",
-    "## Sampling\n",
-    "\n",
-    "The page titles associated with a category are hand-picked. See `instances/ms_problem.py` for an example.\n",
-    "\n",
-    "## Meaning of Numbers\n",
-    "\n",
-    "- When you see a feature like 'google' in the graphs, that means the proportion of traffic through that referer to the traffic through all referers in the 'selection' set (excepting intra-wikipedia links). \n",
-    "- "
+    "Let's first examine the question 'do people use the microsoft bing search engine notably often to look at microsoft-related wikipedia pages?' I would expect so, because\n",
+    "* microsoft makes bing the default search engine on microsoft stuff, and many people tend not to switch away from defaults.\n",
+    "* people who use microsoft products may be most likely to be reading about microsoft products."
    ]
   },
   {
@@ -436,6 +427,18 @@
    "source": [
     "import instances.ms\n",
     "ms_problem = WikiProblem(instances.ms.inst, selection={'google','bing','yahoo'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## Reading these graphs\n",
+    "\n"
    ]
   },
   {
@@ -561,14 +564,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Evidently, "
+    "Evidently, the hypothesis is correct. People there is a bing-favoring-bias in pages related to microsoft products."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is a word 'clickbait' that people use to talk about provocativly titled stuff that people click on. Here, we consider the categories 'sex', 'drugs', 'danger', and 'politics' as potentially clickbait. Let's look at what the numbers say."
+    "# Clickbait Problem\n",
+    "\n",
+    "People coined the word 'clickbait' to talk about web pages that people visit because they have provocative titles. Here, we consider the categories 'sex', 'drugs', 'danger', and 'politics' as potentially clickbait. Let's look at what the numbers say."
    ]
   },
   {
@@ -813,7 +818,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I sometimes find myself reading about a author/artist I'm interested in, and while I'm on that page I click on their discography or filmography or whatever out of curiosity. However, I don't remember ever searching for a list of things done by a person. I wonder whether other people have a similar usage pattern. Let's see."
+    "# Hierarchical Surfing\n",
+    "\n",
+    "I sometimes find myself reading about a author or artist I'm interested in, and while I'm on that page I click on their discography or filmography or whatever out of curiosity. However, I don't remember ever searching for a list of things done by a person. I wonder whether other people have a similar usage pattern. Let's see what the numbers say."
    ]
   },
   {
@@ -966,6 +973,8 @@
     "collapsed": false
    },
    "source": [
+    "# Parts of Speech\n",
+    "\n",
     "Another potential source of bias is in parts of speech. Because it is easy to make samples, here we go..."
    ]
   },
@@ -2045,92 +2054,6 @@
     "for item in ms_problem.experimental['microsoft'].iteritems():\n",
     "    print(item)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.panel.Panel"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "fsts = popularity_even_problem.experimental[['1','2']]\n",
-    "type(fsts)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "ss = pd.Series(range(10))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0     2\n",
-       "1     3\n",
-       "2     4\n",
-       "3     5\n",
-       "4     6\n",
-       "5     7\n",
-       "6     8\n",
-       "7     9\n",
-       "8    10\n",
-       "9    11\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ss.apply(lambda x: x + 2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "sns.set_palette??"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
